--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://badido18.github.io/portfolio",
+  "homepage": ".",
   "name": "client",
   "version": "0.1.0",
   "private": true,
